added Andre's transcomms paper

--- a/robby.html
+++ b/robby.html
@@ -85,7 +85,22 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_Pollock_CRB_polyphase_2013">5</a>]
+[<a name="Pollok_McKilliam_crb_cpm_2014">5</a>]
+</td>
+<td class="bibtexitem">
+A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
+ Modified Cram&eacute;r-Rao bounds for continuous-phase modulated
+  signals.
+ accepted to IEEE Transactions on Communications, 2014.
+[&nbsp;<a href="robby_bib.html#Pollok_McKilliam_crb_cpm_2014">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_Pollock_CRB_polyphase_2013">6</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;McKilliam and A.&nbsp;Pollok.
@@ -100,7 +115,7 @@ R.&nbsp;McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_mean_dir_est_sq_arc_length2010">6</a>]
+[<a name="McKilliam_mean_dir_est_sq_arc_length2010">7</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -115,7 +130,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKpilotsdata_2012">7</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">8</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
@@ -131,7 +146,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_time_offset_pilots_data_2013">8</a>]
+[<a name="McKilliam_time_offset_pilots_data_2013">9</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
@@ -146,7 +161,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">9</a>]
+[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
@@ -161,7 +176,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkso
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">10</a>]
+[<a name="Quinn_sparse_noisy_SSP_2012">11</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -177,7 +192,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">11</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">12</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -196,7 +211,7 @@ Keywords: Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;po
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">12</a>]
+[<a name="McKilliam_error_prob_An2012">13</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Clarkson.
@@ -211,7 +226,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Cla
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">13</a>]
+[<a name="McKilliam_direstcro_dasp_2011">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -225,7 +240,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">14</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -242,7 +257,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">15</a>]
+[<a name="McKilliam2007">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -258,7 +273,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">16</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -278,7 +293,7 @@ We propose a new algorithm for noncoherent sequence detection of M-ary phase-shi
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">17</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">18</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -293,7 +308,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">18</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">19</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -309,7 +324,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6363913">19</a>]
+[<a name="6363913">20</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -329,13 +344,13 @@ Keywords: Monte Carlo methods;channel coding;code division multiple access;inter
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn20013asilomar_period_est">20</a>]
+[<a name="Quinn20013asilomar_period_est">21</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
  On the periodogram estimator of period from sparse, noisy timing
   data.
- accepted to Asilomar Conference on Signals, Systems, and Computers,
+ In <em>Asilomar Conference on Signals, Systems, and Computers</em>,
   2013.
 [&nbsp;<a href="robby_bib.html#Quinn20013asilomar_period_est">bib</a>&nbsp;]
 
@@ -345,7 +360,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">21</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">22</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -360,7 +375,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">22</a>]
+[<a name="McKilliam2006">23</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -375,7 +390,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">23</a>]
+[<a name="McKilliam2008">24</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -391,7 +406,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">24</a>]
+[<a name="McKilliam2008b">25</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -407,7 +422,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">25</a>]
+[<a name="McKilliam2008a">26</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -424,7 +439,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">26</a>]
+[<a name="McKilliam2009CoxeterLattices">27</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -442,7 +457,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">27</a>]
+[<a name="McKilliam2010thesis">28</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -457,7 +472,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">28</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">29</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -478,7 +493,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">29</a>]
+[<a name="Quinn2008maximizing_the_periodogram">30</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -496,12 +511,12 @@ Keywords: Newton method, fast Fourier transforms, frequency estimation, FFT, New
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_pps_unwrapping_tsp_2014">30</a>]
+[<a name="McKilliam_pps_unwrapping_tsp_2014">31</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
  Polynomial phase estimation by least squares phase unwrapping.
- accepted to IEEE Transactions on Signal Processing, Jan. 2014.
+ Jan. 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_pps_unwrapping_tsp_2014">bib</a>&nbsp;]
 
 </td>
@@ -510,7 +525,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Mor
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_arxiv_pps_unwrapping_2012">31</a>]
+[<a name="McKilliam_arxiv_pps_unwrapping_2012">32</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
