--- a/robby_bib.html
+++ b/robby_bib.html
@@ -55,6 +55,15 @@
 }
 </pre>
 
+<a name="Pollok_McKilliam_crb_cpm_2014"></a><pre>
+@unpublished{<a href="robby.html#Pollok_McKilliam_crb_cpm_2014">Pollok_McKilliam_crb_cpm_2014</a>,
+  title = {Modified {Cram\'er-Rao} bounds for continuous-phase modulated signals},
+  author = {A. Pollok and R. G. McKilliam},
+  note = {accepted to IEEE Transactions on Communications},
+  year = 2014
+}
+</pre>
+
 <a name="McKilliam_Pollock_CRB_polyphase_2013"></a><pre>
 @article{<a href="robby.html#McKilliam_Pollock_CRB_polyphase_2013">McKilliam_Pollock_CRB_polyphase_2013</a>,
   author = {R. McKilliam and A. Pollok},
@@ -250,10 +259,10 @@
 </pre>
 
 <a name="Quinn20013asilomar_period_est"></a><pre>
-@unpublished{<a href="robby.html#Quinn20013asilomar_period_est">Quinn20013asilomar_period_est</a>,
+@inproceedings{<a href="robby.html#Quinn20013asilomar_period_est">Quinn20013asilomar_period_est</a>,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
-  note = {accepted to Asilomar Conference on Signals, Systems, and Computers},
+  booktitle = {Asilomar Conference on Signals, Systems, and Computers},
   year = 2013
 }
 </pre>
@@ -274,9 +283,7 @@
   author = {R. G. McKilliam and G. Wyeth},
   title = {Fast and Robust Stereo Object Recognition for Spheres},
   journal = {Proc. Australasian Conference on Robotics and Automation},
-  year = {2006},
-  owner = {robertm},
-  timestamp = {2008.02.28},
+  year = 2006,
   url = {<a href="http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf">http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf</a>}
 }
 </pre>
@@ -291,8 +298,6 @@
   pages = {4378-4381},
   number = 9,
   month = {Sep.},
-  owner = {Robby},
-  timestamp = {2008.02.05},
   doi = {10.1109/TIT.2008.928280},
   issn = {0018-9448},
   url = {<a href="http://arxiv.org/abs/0801.1364">http://arxiv.org/abs/0801.1364</a>}
@@ -391,7 +396,7 @@
 @unpublished{<a href="robby.html#McKilliam_pps_unwrapping_tsp_2014">McKilliam_pps_unwrapping_tsp_2014</a>,
   author = {R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
   title = {Polynomial phase estimation by least squares phase unwrapping},
-  notes = {accepted to IEEE Trans. Signal Processing},
+  notes = {accepted to IEEE Transactions on Signal Processing},
   year = {2014},
   month = {Jan.}
 }
