--- a/robby_bib.html
+++ b/robby_bib.html
@@ -393,12 +393,18 @@
 </pre>
 
 <a name="McKilliam_pps_unwrapping_tsp_2014"></a><pre>
-@unpublished{<a href="robby.html#McKilliam_pps_unwrapping_tsp_2014">McKilliam_pps_unwrapping_tsp_2014</a>,
+@article{<a href="robby.html#McKilliam_pps_unwrapping_tsp_2014">McKilliam_pps_unwrapping_tsp_2014</a>,
   author = {R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
-  title = {Polynomial phase estimation by least squares phase unwrapping},
-  notes = {accepted to IEEE Transactions on Signal Processing},
-  year = {2014},
-  month = {Jan.}
+  journal = {IEEE Trans. Sig. Process.},
+  title = {Polynomial Phase Estimation by Least Squares Phase Unwrapping},
+  year = 2014,
+  month = {April},
+  volume = 62,
+  number = 8,
+  pages = {1962-1975},
+  keywords = {Lattices;Least squares approximations;Phase estimation;Polynomials;Signal processing algorithms;Signal to noise ratio;Asymptotic properties;nearest lattice point problem;phase unwrapping;polynomial phase signals},
+  doi = {10.1109/TSP.2014.2306178},
+  issn = {1053-587X}
 }
 </pre>
 
