--- a/robby.html
+++ b/robby.html
@@ -149,11 +149,15 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 [<a name="McKilliam_time_offset_pilots_data_2013">9</a>]
 </td>
 <td class="bibtexitem">
-R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
+R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and W.&nbsp;Cowley.
  Simultaneous symbol timing and frame synchronization for phase shift
   keying.
- accepted to IEEE Transactions on Communications, Jan. 2014.
-[&nbsp;<a href="robby_bib.html#McKilliam_time_offset_pilots_data_2013">bib</a>&nbsp;]
+ <em>IEEE Trans. Commun.</em>, 62(3):1114-1123, Mar. 2014.
+[&nbsp;<a href="robby_bib.html#McKilliam_time_offset_pilots_data_2013">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/TCOMM.2014.020614.130277">DOI</a>&nbsp;]
+<blockquote><font size="-1">
+Keywords: Complexity theory;Linear programming;Phase shift keying;Receivers;Signal to noise ratio;Synchronization;Synchronisation;phase shift keying
+</font></blockquote>
 
 </td>
 </tr>
@@ -411,7 +415,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
  A linear-time nearest point algorithm for the lattice <em>A</em><sub>n</sub><sup>*</sup>.
- <em>International Symposium on Information Theory and its
+ In <em>International Symposium on Information Theory and its
   Applications</em>, Dec. 2008.
 [&nbsp;<a href="robby_bib.html#McKilliam2008b">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1109/ISITA.2008.489559">DOI</a>&nbsp;]
@@ -498,7 +502,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
  Maximizing the periodogram.
- <em>IEEE GLOBECOM</em>, pages 1-5, Dec 2008.
+ In <em>IEEE Global Communications Conference</em>, pages 1-5, Dec 2008.
 [&nbsp;<a href="robby_bib.html#Quinn2008maximizing_the_periodogram">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1109/GLOCOM.2008.ECP.668">DOI</a>&nbsp;]
 <blockquote><font size="-1">
