--- a/robby_bib.html
+++ b/robby_bib.html
@@ -102,12 +102,18 @@
 </pre>
 
 <a name="McKilliam_time_offset_pilots_data_2013"></a><pre>
-@unpublished{<a href="robby.html#McKilliam_time_offset_pilots_data_2013">McKilliam_time_offset_pilots_data_2013</a>,
-  author = {R. G. McKilliam and A. Pollok and B. Cowley},
-  title = {Simultaneous symbol timing and frame synchronization for phase shift keying},
-  note = {accepted to IEEE Transactions on Communications},
+@article{<a href="robby.html#McKilliam_time_offset_pilots_data_2013">McKilliam_time_offset_pilots_data_2013</a>,
+  author = {R. G. McKilliam and A. Pollok and W. Cowley},
+  journal = {IEEE Trans. Commun.},
+  title = {Simultaneous Symbol Timing and Frame Synchronization for Phase Shift Keying},
   year = 2014,
-  month = {Jan.}
+  month = {Mar.},
+  volume = 62,
+  number = 3,
+  pages = {1114-1123},
+  keywords = {Complexity theory;Linear programming;Phase shift keying;Receivers;Signal to noise ratio;Synchronization;Synchronisation;phase shift keying},
+  doi = {10.1109/TCOMM.2014.020614.130277},
+  issn = {0090-6778}
 }
 </pre>
 
@@ -305,10 +311,10 @@
 </pre>
 
 <a name="McKilliam2008b"></a><pre>
-@article{<a href="robby.html#McKilliam2008b">McKilliam2008b</a>,
+@inproceedings{<a href="robby.html#McKilliam2008b">McKilliam2008b</a>,
   author = {R. G. McKilliam and I. V. L. Clarkson and W. D. Smith and B. G. Quinn},
   title = {A linear-time nearest point algorithm for the lattice ${A}_{n}^*$},
-  journal = {International Symposium on Information Theory
+  booktitle = {International Symposium on Information Theory
 	and its Applications},
   month = {Dec.},
   year = 2008,
@@ -379,10 +385,10 @@
 </pre>
 
 <a name="Quinn2008maximizing_the_periodogram"></a><pre>
-@article{<a href="robby.html#Quinn2008maximizing_the_periodogram">Quinn2008maximizing_the_periodogram</a>,
+@inproceedings{<a href="robby.html#Quinn2008maximizing_the_periodogram">Quinn2008maximizing_the_periodogram</a>,
   title = {Maximizing the Periodogram},
   author = {B. G. Quinn and R. G. McKilliam and I. V. L. Clarkson},
-  journal = {IEEE GLOBECOM},
+  booktitle = {IEEE Global Communications Conference},
   year = {2008},
   month = {Dec},
   pages = {1-5},
