--- a/robby.html
+++ b/robby.html
@@ -36,7 +36,21 @@ David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Ma
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6510040">2</a>]
+[<a name="Kodithuwakku_tcomms_2014">2</a>]
+</td>
+<td class="bibtexitem">
+J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
+ Decoder-assisted timing synchronization in multiuser CDMA systems.
+ accepted to IEEE Trans. Comm., Apr.
+[&nbsp;<a href="robby_bib.html#Kodithuwakku_tcomms_2014">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="6510040">3</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -55,7 +69,7 @@ Keywords: Monte Carlo methods;code division multiple access;decoding;interferenc
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_2012">3</a>]
+[<a name="McKilliam_asrp_phase_2012">4</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechner, I.&nbsp;Land, R.&nbsp;G.
@@ -70,7 +84,7 @@ A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechne
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_patent_2012">4</a>]
+[<a name="McKilliam_asrp_phase_patent_2012">5</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
@@ -85,7 +99,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Pollok_McKilliam_crb_cpm_2014">5</a>]
+[<a name="Pollok_McKilliam_crb_cpm_2014">6</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
@@ -100,7 +114,7 @@ A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_Pollock_CRB_polyphase_2013">6</a>]
+[<a name="McKilliam_Pollock_CRB_polyphase_2013">7</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;McKilliam and A.&nbsp;Pollok.
@@ -115,7 +129,7 @@ R.&nbsp;McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_mean_dir_est_sq_arc_length2010">7</a>]
+[<a name="McKilliam_mean_dir_est_sq_arc_length2010">8</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -130,7 +144,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKpilotsdata_2012">8</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">9</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
@@ -146,7 +160,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_time_offset_pilots_data_2013">9</a>]
+[<a name="McKilliam_time_offset_pilots_data_2013">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and W.&nbsp;Cowley.
@@ -165,7 +179,7 @@ Keywords: Complexity theory;Linear programming;Phase shift keying;Receivers;Sign
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">10</a>]
+[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
@@ -180,7 +194,23 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkso
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">11</a>]
+[<a name="Quinn_multiple_sparse_noisy_SSP_2014">12</a>]
+</td>
+<td class="bibtexitem">
+B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
+ On the periodogram estimators of periods from interleaved sparse,
+  noisy timing data.
+ accepted to IEEE Statistical Signal Processing Workshop (SSP),
+  Jul. 2014.
+[&nbsp;<a href="robby_bib.html#Quinn_multiple_sparse_noisy_SSP_2014">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Quinn_sparse_noisy_SSP_2012">13</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -196,7 +226,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">12</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -215,10 +245,10 @@ Keywords: Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;po
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">13</a>]
+[<a name="McKilliam_error_prob_An2012">15</a>]
 </td>
 <td class="bibtexitem">
-R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Clarkson.
+R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
  On the error performance of the <em>a</em><sub>n</sub> lattices.
  <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.
 [&nbsp;<a href="robby_bib.html#McKilliam_error_prob_An2012">bib</a>&nbsp;| 
@@ -230,7 +260,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Cla
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">14</a>]
+[<a name="McKilliam_direstcro_dasp_2011">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -244,7 +274,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">15</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -261,7 +291,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">16</a>]
+[<a name="McKilliam2007">18</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -277,7 +307,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">17</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">19</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -297,7 +327,7 @@ We propose a new algorithm for noncoherent sequence detection of M-ary phase-shi
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">18</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">20</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -312,7 +342,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">19</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -328,7 +358,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6363913">20</a>]
+[<a name="6363913">22</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -348,7 +378,7 @@ Keywords: Monte Carlo methods;channel coding;code division multiple access;inter
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn20013asilomar_period_est">21</a>]
+[<a name="Quinn20013asilomar_period_est">23</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -364,7 +394,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">22</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">24</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -379,7 +409,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">23</a>]
+[<a name="McKilliam2006">25</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -394,7 +424,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">24</a>]
+[<a name="McKilliam2008">26</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -410,7 +440,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">25</a>]
+[<a name="McKilliam2008b">27</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -426,7 +456,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">26</a>]
+[<a name="McKilliam2008a">28</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -443,7 +473,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">27</a>]
+[<a name="McKilliam2009CoxeterLattices">29</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -461,7 +491,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">28</a>]
+[<a name="McKilliam2010thesis">30</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -476,7 +506,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">29</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">31</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -497,7 +527,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">30</a>]
+[<a name="Quinn2008maximizing_the_periodogram">32</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -515,7 +545,7 @@ Keywords: Newton method, fast Fourier transforms, frequency estimation, FFT, New
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_pps_unwrapping_tsp_2014">31</a>]
+[<a name="McKilliam_pps_unwrapping_tsp_2014">33</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
@@ -533,7 +563,7 @@ Keywords: Lattices;Least squares approximations;Phase estimation;Polynomials;Sig
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_arxiv_pps_unwrapping_2012">32</a>]
+[<a name="McKilliam_arxiv_pps_unwrapping_2012">34</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
