--- a/robby_bib.html
+++ b/robby_bib.html
@@ -24,6 +24,15 @@
 }
 </pre>
 
+<a name="Kodithuwakku_tcomms_2014"></a><pre>
+@unpublished{<a href="robby.html#Kodithuwakku_tcomms_2014">Kodithuwakku_tcomms_2014</a>,
+  author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
+  note = {accepted to {IEEE Trans. Comm.}},
+  title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
+  month = {Apr.}
+}
+</pre>
+
 <a name="6510040"></a><pre>
 @inproceedings{<a href="robby.html#6510040">6510040</a>,
   author = {Kodithuwakku, J. and Letzepis, N. and Grant, A. and McKilliam, R.},
@@ -128,6 +137,16 @@
 }
 </pre>
 
+<a name="Quinn_multiple_sparse_noisy_SSP_2014"></a><pre>
+@unpublished{<a href="robby.html#Quinn_multiple_sparse_noisy_SSP_2014">Quinn_multiple_sparse_noisy_SSP_2014</a>,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  note = {accepted to {IEEE} Statistical Signal Processing Workshop {(SSP)}},
+  title = {On the periodogram estimators of periods from interleaved sparse, noisy timing data},
+  year = 2014,
+  month = {Jul.}
+}
+</pre>
+
 <a name="Quinn_sparse_noisy_SSP_2012"></a><pre>
 @inproceedings{<a href="robby.html#Quinn_sparse_noisy_SSP_2012">Quinn_sparse_noisy_SSP_2012</a>,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
@@ -156,7 +175,7 @@
 
 <a name="McKilliam_error_prob_An2012"></a><pre>
 @article{<a href="robby.html#McKilliam_error_prob_An2012">McKilliam_error_prob_An2012</a>,
-  author = {R. G. McKilliam and R. Subramanian and E. Viterbo I. V. L. Clarkson},
+  author = {R. G. McKilliam and R. Subramanian and E. Viterbo and I. V. L. Clarkson},
   journal = {IEEE Trans. Inform. Theory},
   title = {On the Error Performance of the $A_{n}$ Lattices},
   year = 2012,
